standardizes references to boba-backend.

--- a/src/content/docs/development/boba-backend/APIs/API-guidelines.mdx
+++ b/src/content/docs/development/boba-backend/APIs/API-guidelines.mdx
@@ -2,7 +2,7 @@
 title: API Guidelines
 ---
 
-These rules must be followed when creating new API endpoint in BobaBackend.
+These rules must be followed when creating new API endpoint in boba-backend.
 They're a subset of the excellent
 [Zalando RESTful API guidelines](https://opensource.zalando.com/restful-api-guidelines/).
 
