--- a/src/content/docs/development/boba-backend/APIs/intro.mdx
+++ b/src/content/docs/development/boba-backend/APIs/intro.mdx
@@ -16,7 +16,7 @@ In short, **a server's API defines the language ("contract") that client
 applications must use to communicate with it**. Most API operations involve
 fetching, storing, or updating data.
 
-While there are very few restrictions on how APIs can be defined, BobaBackend's
+While there are very few restrictions on how APIs can be defined, boba-backend's
 API follows
 [a special set of API guidelines](https://www.redhat.com/en/topics/api/what-is-a-rest-api)
 called REST. **REST APIs allow clients to communicate with a server by "visting"
@@ -25,12 +25,12 @@ access different web pages through their addresses.
 
 Following REST principles has several advantages, including easier
 understanding, definition, and scalability of APIs. You can find more details
-about the REST principles followed by BobaBackend in the
+about the REST principles followed by boba-backend in the
 [API guidelines](./API-guidelines) page.
 
 <Aside type="tip">
 
-You can explore the full BobaBackend API on the
+You can explore the full boba-backend API on the
 [REST API documentation page](/docs/development/rest-api/).
 
 </Aside>
@@ -92,10 +92,10 @@ BobaBoard's API, the responses are returned in the
 
 :::danger
 
-**The following examples do not reflect how BobaBackend works in practice**, and
+**The following examples do not reflect how boba-backend works in practice**, and
 are just meant to help understand REST APIs.
 
-The source of truth for the BobaBackend API is our
+The source of truth for the boba-backend API is our
 [REST API documentation page](/docs/development/rest-api/).
 
 :::
