--- a/src/content/docs/development/boba-backend/getting-started.mdx
+++ b/src/content/docs/development/boba-backend/getting-started.mdx
@@ -25,7 +25,7 @@ You can check the current Node version by running `node -v`.
 
 :::
 
-BobaBackend needs 3 different components to run:
+boba-backend needs 3 different components to run:
 
 1. The actual server (NodeJS + Express)
 2. The database (PostgreSQL)
