--- a/src/content/docs/development/contribute/boba-backend.mdx
+++ b/src/content/docs/development/contribute/boba-backend.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install BobaBackend
+title: Install boba-backend
 sidebar:
   order: 4
 ---
@@ -15,7 +15,7 @@ installed.** This is the only codebase that needs it.
 
 ## Install Instructions
 
-The first time you work on BobaBackend you'll need to
+The first time you work on boba-backend you'll need to
 [fork the repository](https://docs.github.com/en/get-started/quickstart/fork-a-repo#forking-a-repository)
 so you can edit your own version of the code.
 
@@ -102,4 +102,4 @@ Open `firebase-sdk.json` and paste the following content within it:
 ## Start a local server
 
 You can now [follow the instructions](../boba-backend/getting-started) in the
-bobabackend guide and start your own local server.
+boba-backend guide and start your own local server.
