--- a/src/content/docs/development/contribute/setting-up-dev-env.mdx
+++ b/src/content/docs/development/contribute/setting-up-dev-env.mdx
@@ -29,7 +29,7 @@ page to make it less scary for newcomers.
 - [ ] [Git](#git)
 - [ ] [NodeJS](#nodejs-with-nvm)
 - [ ] [Yarn](#yarn)
-- [ ] [Docker](#docker-bobabackend-only) [BobaBackend Only]
+- [ ] [Docker](#docker-boba-backend-only) [boba-backend Only]
 
 ### Windows Subsystem for Linux (WSL) [Windows Only]
 
@@ -106,7 +106,7 @@ that.
 
 </Aside>
 
-### Docker [BobaBackend Only]
+### Docker [boba-backend Only]
 
 [**Docker**](https://www.docker.com/products/docker-desktop) runs applications
 in containers.
