--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -256,7 +256,7 @@ up-to-date version of yarn with no issue.
 
 ### <Icon name="seti:windows" class="inline-icon" /> Installing Docker
 
-Docker runs programs in containers and is used by BobaBackend to run the
+Docker runs programs in containers and is used by boba-backend to run the
 database on your local server. From the Docker resources:
 
 > A container is a standard unit of software that packages up code and all its
@@ -266,7 +266,7 @@ database on your local server. From the Docker resources:
 If you're interested on more information on containers, please see
 [What is a container?](https://www.docker.com/resources/what-container/).
 
-**You should install this if you plan working on BobaBackend, BobaFrontend, etc.
+**You should install this if you plan working on boba-backend, BobaFrontend, etc.
 It is not needed for boba-docs! If you're confused about whether you need
 Docker, please reach out in the Volunteer Server!**
 
@@ -317,7 +317,7 @@ terminal. For help with useful terminal commands see the
 Now that you've navigated into your directory, you're ready to start cloning the
 various BobaBoard repos. See
 [Install BobaFrontend](/docs/development/start-developing/boba-frontend),
-[Install BobaBackend](/docs/development/start-developing/boba-backend), or
+[Install boba-backend](/docs/development/start-developing/boba-backend), or
 [Install BobaComponents](/docs/development/start-developing/boba-components) for
 more details.
 
