--- a/src/content/docs/development/legacy-pages/useful-commands.mdx
+++ b/src/content/docs/development/legacy-pages/useful-commands.mdx
@@ -18,14 +18,14 @@ yarn run storybook
 For `BobaFrontend` run:
 
 ```bash showLineNumbers
-# Start instance connected to local server (BobaBackend must be running)
+# Start instance connected to local server (boba-backend must be running)
 yarn run dev
 
 # Start instance connected to staging server (note: changes go to prod DB)
 yarn run dev:stage
 ```
 
-For `BobaBackend` run:
+For `boba-backend` run:
 
 ```bash showLineNumbers
 yarn run start-db
