standardizes references to boba-docs.

--- a/src/content/docs/volunteering/coding/github/understanding-github.mdx
+++ b/src/content/docs/volunteering/coding/github/understanding-github.mdx
@@ -66,7 +66,7 @@ solved by git through a process called **merge**.
 
 **Why do I have to fork to work on anything?**
 
-Only the BobaLord is allowed to edit the original copy of BobaDocs. This is
+Only the BobaLord is allowed to edit the original copy of boba-docs. This is
 good, because it prevents random people from showing up and screwing up the
 site. This also means that _you_ can't edit them directly. Forking creates a
 repo that you _can_ edit, from which you can send the changes you make back to
