--- a/src/content/docs/volunteering/communications/editing-bobadocs-appendix.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs-appendix.mdx
@@ -1,5 +1,5 @@
 ---
-title: Editing BobaDocs Appendix
+title: Editing boba-docs Appendix
 ---
 
 Additional how-tos that don't fit in the main guide.
@@ -12,7 +12,7 @@ currently in** with one of two ways: by creating one within the GitHub editor,
 or by uploading one. Once you've selected an option, the process works the same
 as making edits to and committing an already-existing file.
 
-BobaDocs generates sidebars automatically based on the filename of the pages in
+boba-docs generates sidebars automatically based on the filename of the pages in
 it: **so make sure you title your filename with the title you want it to have on
 the site**. Much like git branches, the format it uses is
 `words-separated-by-dashes.md`. Using that as a filename would give you a page
@@ -61,7 +61,7 @@ you see the checks, and click the link shown below.
 
 ![screenshot of the pull request, with an arrow pointing to the details link of "Deploy preview ready!"](/img/volunteer/bobadocsdeploypreview.jpg)
 
-A version of BobaDocs including the changes you made will open. You can poke
+A version of boba-docs including the changes you made will open. You can poke
 around, admire your work, and if you're quick, maybe catch a bug and fix it with
 none the wiser.
 
