--- a/src/content/docs/volunteering/communications/editing-bobadocs.mdx
+++ b/src/content/docs/volunteering/communications/editing-bobadocs.mdx
@@ -1,12 +1,12 @@
 ---
-title: Editing BobaDocs
+title: Editing boba-docs
 sidebar:
   order: 1
 ---
 
 import { Aside } from '@astrojs/starlight/components';
 
-This guide will show you how to edit BobaDocs, the website that you're looking
+This guide will show you how to edit boba-docs, the website that you're looking
 at _right now._
 
 You will need:
@@ -20,30 +20,30 @@ You will NOT need:
 
 - Any knowledge of command lines.
 
-## Step 0: Create your own copy of BobaDocs
+## Step 0: Create your own copy of boba-docs
 
-Only the BobaLord is allowed to modify the original copy of BobaDocs. To make
+Only the BobaLord is allowed to modify the original copy of boba-docs. To make
 changes, you'll have to your own copy of the files. This process is called
 forking, and you can read more about it in our
 [knowledge base](/docs/volunteering/coding/github/understanding-github).
 
-**If you already have a copy of BobaDocs, skip to
+**If you already have a copy of boba-docs, skip to
 [Keeping your files updated](#keeping-your-files-updated).**
 
 Here are the steps to do this:
 
 1. Make sure you're logged in to GitHub.
 2. Navigate to the main repo for the site at
-   [https://github.com/essential-randomness/bobadocs](https://github.com/essential-randomness/bobadocs).
+   [https://github.com/essential-randomness/boba-docs](https://github.com/essential-randomness/boba-docs).
    (You can also get there by clicking the "GitHub" link on the top right corner
-   of the BobaDocs site!)
+   of the boba-docs site!)
 3. Click the "Fork" button on the top right corner of the page.
 4. You will be automatically redirected to your copy of the files. You can
    double-check that you're on your copy by checking the name of the git repo on
-   the top left of the page. It should say `[USERNAME]/bobadocs` with
-   `forked from essential-randomness/bobadocs` in smaller text under it.
+   the top left of the page. It should say `[USERNAME]/boba-docs` with
+   `forked from essential-randomness/boba-docs` in smaller text under it.
 
-![a cropped screenshot of the bobadocs github page, with a red arrow pointing to the fork button](/img/volunteer/bobadocsfork.jpg)
+![a cropped screenshot of the boba-docs github page, with a red arrow pointing to the fork button](/img/volunteer/bobadocsfork.jpg)
 
 <Aside type="tip">
 
@@ -55,7 +55,7 @@ more about branching.
 
 ### Keeping your files updated
 
-As more and more people edit BobaDocs, the main repo will be updated, including
+As more and more people edit boba-docs, the main repo will be updated, including
 changes that your repo doesn't have. Not to worry! GitHub will prompt you when
 this occurs. All you need to to is click the "Fetch upstream" dropdown on your
 main repo page, click "Fetch and merge", and GitHub will do the rest.
@@ -63,7 +63,7 @@ main repo page, click "Fetch and merge", and GitHub will do the rest.
 ## Step 1: Open the page in GitHub's editor
 
 Now that you have your own copy of the files, all you have to do to edit the
-pages in BobaDocs is edit those files. GitHub has a built-in editor that makes
+pages in boba-docs is edit those files. GitHub has a built-in editor that makes
 this easy to do. Here's how you get to it:
 
 1. Start by opening the page you want to edit in your browser.
@@ -72,20 +72,20 @@ this easy to do. Here's how you get to it:
 3. Edit the URL of the editor page by replacing `essential-randomness` with your
    GitHub username. Going to the edited URL will open the same editor, but using
    your copy of the files. _Use this editor._ Like before, you can tell you're
-   in the right place if `[USERNAME]/bobadocs` appears on the top left.
+   in the right place if `[USERNAME]/boba-docs` appears on the top left.
 
 <Aside type="tip">
 
 Remember how the last tip mentioned branching? That last bullet is there to keep
 you from accidentally creating a branch (something outside the scope of this
 guide). If you do create a new branch and need to delete it, see the
-[appendix](./editing-bobadocs-appendix/#deleting-a-branch) for how to do that.
+[appendix](./editing-boba-docs-appendix/#deleting-a-branch) for how to do that.
 
 </Aside>
 
 ## Step 2: Make your edits
 
-To edit pages in BobaDocs, you need to use Markdown. **Markdown** is a widely
+To edit pages in boba-docs, you need to use Markdown. **Markdown** is a widely
 used system for formatting text. If you've typed asterisks into Discord to
 italicize something, you've used markdown.
 
