--- a/src/content/docs/development/bobadocs.mdx
+++ b/src/content/docs/development/bobadocs.mdx
@@ -1,11 +1,11 @@
 ---
-title: BobaDocs
+title: boba-docs
 sidebar:
   order: 5
 ---
 
 The guide you're currently reading is called
-[BobaDocs](https://github.com/essential-randomness/bobadocs). It's built using
+[boba-docs](https://github.com/essential-randomness/boba-docs). It's built using
 [Docusaurus](https://docusaurus.io/).
 
 This page is a brief overview of how Docusaurs' filesystem works, and how that
@@ -16,18 +16,18 @@ maps to this documentation. More detailed information can be found in
 
 Docusaurus separates site content into four folders:
 
-- `blog`: containing blogposts (this is unused by BobaDocs at this time)
+- `blog`: containing blogposts (this is unused by boba-docs at this time)
 - `docs`: containing the pages on the site
 - `src`: containing information on how to build the site, including styling
 - `static`: containing static site data, such as images
 
-## BobaDocs Folder Structure
+## boba-docs Folder Structure
 
-All the documentation pages in BobaDocs are stored in the `docs` folder as `.md`
+All the documentation pages in boba-docs are stored in the `docs` folder as `.md`
 files. In `docs`, there are four folders, each of which correspond to one of the
-guides on BobaDocs as shown below:
+guides on boba-docs as shown below:
 
-![a screenshot of the git repo compared to the top navbar on BobaDocs. lines are drawn between items with similar names](../../../assets/img/volunteer/bobadocsnav4.jpg)
+![a screenshot of the git repo compared to the top navbar on boba-docs. lines are drawn between items with similar names](../../../assets/img/volunteer/bobadocsnav4.jpg)
 
 Each of these guides has a different purpose:
 
@@ -46,7 +46,7 @@ Each of these guides has a different purpose:
 Opening any one of these folders will net you the files and folders that are in
 the guide. As an example, here's the Development Guide's files:
 
-![a screenshot of the git repo compared to the sidebar on BobaDocs. lines are drawn between items with similar names](../../../assets/img/volunteer/bobadocsnav2.jpg)
+![a screenshot of the git repo compared to the sidebar on boba-docs. lines are drawn between items with similar names](../../../assets/img/volunteer/bobadocsnav2.jpg)
 
 Docusaurus uses the structure within each guide's folder to generate the
 sidebars for that guide. Each markdown file is a page, and they can be collected
@@ -56,7 +56,7 @@ Also of note: the URL of each page comes directly from this folder structure,
 with the URL following the pattern:
 
 ```
-https://bobadocs.netlify.app/[PATH TO FILE]
+https://boba-docs.netlify.app/[PATH TO FILE]
 ```
 
 If you replace \[PATH TO FILE] with the filepath in the repo, you get the URL
@@ -65,5 +65,5 @@ extension `.md`. For example, the URL of this page, which has the filepath
 `/docs/development/docusaurus.md` is:
 
 ```
-https://bobadocs.netlify.app/docs/development/docusaurus
+https://boba-docs.netlify.app/docs/development/docusaurus
 ```
