standardizes references to boba-frontend.

--- a/src/content/docs/development/contribute/boba-frontend.mdx
+++ b/src/content/docs/development/contribute/boba-frontend.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install BobaFrontend
+title: Install boba-frontend
 sidebar:
   order: 5
 ---
@@ -48,7 +48,7 @@ appear as "boba-tan".
 
 ### Connect to a local `boba-backend` (multiple Realms)
 
-BobaFrontend uses the website address (URL) to distinguish between different
+boba-frontend uses the website address (URL) to distinguish between different
 communities (Realms). For local development, we use
 [the Bonjour protocol](https://softwarekeep.com/help-center/what-is-bonjour-service-on-windows-10)
 to create fake `localhost` addresses in your local network. This allows you to
@@ -104,8 +104,8 @@ yarn link @bobaboard/ui-components
 
 :::warning
 
-To see changes to BobaComponents reflected in BobaFrontend, you must run
-`yarn run build` in the `boba-components` folder. BobaFrontend should then pick
+To see changes to BobaComponents reflected in boba-frontend, you must run
+`yarn run build` in the `boba-components` folder. boba-frontend should then pick
 up the changes when the page is reloaded. Loading may be slower the first time
 after new changes.
 
