--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -210,7 +210,7 @@ and reopening it. If that fails, you may need to restart Windows.
 
 3. Which version of Node is needed depends primarily on what you are going to be
    working on. If you are developing for the main BobaBoard codebases
-   (BobaFrontend, BobaComponents, etc), use the below command to install
+   (boba-frontend, BobaComponents, etc), use the below command to install
    NodeJS 16.
 
    ```bash showLineNumbers
@@ -266,7 +266,7 @@ database on your local server. From the Docker resources:
 If you're interested on more information on containers, please see
 [What is a container?](https://www.docker.com/resources/what-container/).
 
-**You should install this if you plan working on boba-backend, BobaFrontend, etc.
+**You should install this if you plan working on boba-backend, boba-frontend, etc.
 It is not needed for boba-docs! If you're confused about whether you need
 Docker, please reach out in the Volunteer Server!**
 
@@ -316,7 +316,7 @@ terminal. For help with useful terminal commands see the
 
 Now that you've navigated into your directory, you're ready to start cloning the
 various BobaBoard repos. See
-[Install BobaFrontend](/docs/development/start-developing/boba-frontend),
+[Install boba-frontend](/docs/development/start-developing/boba-frontend),
 [Install boba-backend](/docs/development/start-developing/boba-backend), or
 [Install BobaComponents](/docs/development/start-developing/boba-components) for
 more details.
