--- a/src/content/docs/development/legacy-pages/useful-commands.mdx
+++ b/src/content/docs/development/legacy-pages/useful-commands.mdx
@@ -15,7 +15,7 @@ For `BobaEditor` and `BobaComponents` run (in the corresponding folders):
 yarn run storybook
 ```
 
-For `BobaFrontend` run:
+For `boba-frontend` run:
 
 ```bash showLineNumbers
 # Start instance connected to local server (boba-backend must be running)
@@ -54,7 +54,7 @@ localStorage.debug = "bobapost:*,-bobapost:*-verbose";
 localStorage.debug = "bobaui:*";
 
 // Print all the debug logs related to the frontend
-localStorage.debug = "bobafrontend:*";
+localStorage.debug = "boba-frontend:*";
 
 // Print all the debug logs
 localStorage.debug = "*";
