--- a/src/content/docs/development/legacy-pages/legacy-overview.mdx
+++ b/src/content/docs/development/legacy-pages/legacy-overview.mdx
@@ -19,7 +19,7 @@ This is just notes on setup, what pages aren't included, etc.
   main pages have been left out here because their information is already mostly
   covered in this site's [Codebase Overview](../intro).
 
-- BobaFrontend left off because there's nothing there.
+- boba-frontend left off because there's nothing there.
 
 **For the rest of this page, I will just copy what was there in shorter pages.**
 
