standardizes references to boba-editor.

--- a/src/content/docs/development/boba-editor/overview.mdx
+++ b/src/content/docs/development/boba-editor/overview.mdx
@@ -4,8 +4,8 @@ sidebar:
   order: 1
 ---
 
-BobaEditor is BobaBoard's text editor. It's based on
+boba-editor is BobaBoard's text editor. It's based on
 [QuillJS](https://www.quilljs.com).
 
-BobaEditor's input/output format is the [QuillJS Delta](./the-delta-format.mdx),
-which should only be handled through BobaEditor's exported methods.
+boba-editor's input/output format is the [QuillJS Delta](./the-delta-format.mdx),
+which should only be handled through boba-editor's exported methods.
