--- a/src/content/docs/development/contribute/boba-editor.mdx
+++ b/src/content/docs/development/contribute/boba-editor.mdx
@@ -1,5 +1,5 @@
 ---
-title: Install BobaEditor
+title: Install boba-editor
 sidebar:
   order: 7
 ---
@@ -7,9 +7,9 @@ sidebar:
 import { Aside } from '@astrojs/starlight/components';
 
 \[[code](https://github.com/BobaBoard/boba-editor),
-[demo](https://bobaeditor.netlify.app/?path=/story/editor-preview--simple-editor)]
+[demo](https://boba-editor.netlify.app/?path=/story/editor-preview--simple-editor)]
 
-BobaEditor is BobaBoard's own extension of the
+boba-editor is BobaBoard's own extension of the
 [QuillJS text editor](https://quilljs.com/), and is responsible for anything
 related to **text formatting** and **embeds** (both in "edit" and "display"
 mode).
@@ -21,7 +21,7 @@ First,
 in order to save a copy of the code to your own account.
 
 In a terminal on your own machine, enter the local directory where you want to
-keep your copy of BobaEditor, then run the following commands:
+keep your copy of boba-editor, then run the following commands:
 
 ```bash showLineNumbers
 # Clone the codebase from github
@@ -61,7 +61,7 @@ yarn run storybook
 
 You should now have a DevServer running at
 [http://localhost:6006](http://localhost:6006) that will look something like
-[the online demo](https://bobaeditor.netlify.app/).
+[the online demo](https://boba-editor.netlify.app/).
 
 <Aside type="tip">
 
