--- a/src/content/docs/development/intro.mdx
+++ b/src/content/docs/development/intro.mdx
@@ -9,7 +9,7 @@ import { Aside } from '@astrojs/starlight/components';
 BobaBoard's codebase is split within 4 separate repositories, each with its own
 purpose and set of technologies:
 
-- [**boba-editor**](#bobaeditor): our text editor.
+- [**boba-editor**](#boba-editor): our text editor.
 - [**boba-components**](#boba-components): our "design system".
 - [**boba-backend**](#boba-backend): "makes the magic happen" (i.e. saves and
   processes data).
@@ -41,7 +41,7 @@ purpose and set of technologies:
 ## boba-editor
 
 \[[code](https://github.com/BobaBoard/boba-editor),
-[demo](https://bobaeditor.netlify.app/?path=/story/editor-preview--simple-editor)]
+[demo](https://boba-editor.netlify.app/?path=/story/editor-preview--simple-editor)]
 
 boba-editor is BobaBoard's own extension of the
 [QuillJS text editor](https://quilljs.com/), and is responsible for anything
