--- a/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
+++ b/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
@@ -57,7 +57,7 @@ the mobile breakpoint is reached, and will only be displayed again when the
 The component for regular, display posts is `post/Post.tsx`, which has the
 following structure:
 
-![There are four sections, each named after what they control: Header.tsx, Tags.tsx, Footer.tsx, and BobaEditor (which is its own repo). Card.tsx contains the code to bring it all together.](../../../../assets/img/legacy/poststructure.png)
+![There are four sections, each named after what they control: Header.tsx, Tags.tsx, Footer.tsx, and boba-editor (which is its own repo). Card.tsx contains the code to bring it all together.](../../../../assets/img/legacy/poststructure.png)
 
 The component for the post editor is `post/PostEditor.tsx` , which follows a
 similar structure but swaps out `Footer.tsx` for `EditableFooter.tsx`.
