--- a/src/content/docs/development/legacy-pages/useful-commands.mdx
+++ b/src/content/docs/development/legacy-pages/useful-commands.mdx
@@ -9,7 +9,7 @@ Frequently used commands. This is a helpful page to add to your Favorites.
 
 # 🚚 Running dev env
 
-For `BobaEditor` and `BobaComponents` run (in the corresponding folders):
+For `boba-editor` and `BobaComponents` run (in the corresponding folders):
 
 ```bash showLineNumbers
 yarn run storybook
