--- a/src/content/docs/users/howto/threads.mdx
+++ b/src/content/docs/users/howto/threads.mdx
@@ -42,7 +42,7 @@ Threads have three different views available.
 - **Timeline** - groups contributions by the time they were added.
 
 The default view of the thread can be established at the time the thread is
-first posted by selecting the preferred option at the bottom of the BobaEditor.
+first posted by selecting the preferred option at the bottom of the boba-editor.
 It can also be updated by the OP at any time using the
 [Thread Menu](#thread-menu), or you can use the same menu to open a thread in a
 specific view.
@@ -50,7 +50,7 @@ specific view.
 ## Starting a Thread
 
 To start a thread, navigate to the Board where you'd like to post, click the +
-in the bottom right corner, and start typing in the BobaEditor! The BobaEditor
+in the bottom right corner, and start typing in the boba-editor! The boba-editor
 is similar to many other social media editors and supports WYSIWYG (what you see
 is what you get) editing. You can add headers, bold, italics, hyperlinks, lists,
 images, gifs, tags, etc etc.
