clean up development guide sidebar.

--- a/src/content/docs/development/knowledge-base/recommended-tools.mdx
+++ b/src/content/docs/development/knowledge-base/recommended-tools.mdx
@@ -1,5 +1,7 @@
 ---
 title: Recommended Tools
+sidebar:
+  order: 4
 ---
 
 While there is no obligation to use these tools, here's a rundown of the editor
