--- a/src/content/docs/development/philosophy.mdx
+++ b/src/content/docs/development/philosophy.mdx
@@ -1,11 +1,10 @@
 ---
-title: Development Philosophy (draft)
+title: Development Philosophy
 sidebar:
   order: 6
 ---
 
-This page documents the principles leading our engineering choices. It's an
-extreme WIP.
+This page documents the principles leading our engineering choices. 
 
 ## Keep costs low
 
