--- a/src/content/docs/development/contribute/boba-frontend.mdx
+++ b/src/content/docs/development/contribute/boba-frontend.mdx
@@ -88,7 +88,7 @@ package locally, and link it into the `boba-frontend` repository.
 In your `boba-components` directory run:
 
 ```bash showLineNumbers
-# Run the "BobaComponents first installation instructions" first.
+# Run the "boba-components first installation instructions" first.
 yarn run build
 yarn link
 ```
@@ -104,7 +104,7 @@ yarn link @bobaboard/ui-components
 
 :::warning
 
-To see changes to BobaComponents reflected in boba-frontend, you must run
+To see changes to boba-components reflected in boba-frontend, you must run
 `yarn run build` in the `boba-components` folder. boba-frontend should then pick
 up the changes when the page is reloaded. Loading may be slower the first time
 after new changes.
