--- a/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
+++ b/src/content/docs/development/legacy-pages/bobaboard-ui-codebase.mdx
@@ -1,5 +1,5 @@
 ---
-title: BobaComponents Codebase
+title: boba-components Codebase
 sidebar:
   order: 4
 ---
@@ -9,8 +9,8 @@ For installation instructions check out
 
 ## Overview
 
-The BobaComponents Codebase contains all the code pertaining to the
-BobaComponents component ([demo](https://bobaboard-ui.netlify.app/)). It's
+The boba-components Codebase contains all the code pertaining to the
+boba-components component ([demo](https://bobaboard-ui.netlify.app/)). It's
 written in Typescript and React.
 
 There are two important folders:
@@ -33,7 +33,7 @@ of thumb:
 
 ## Components Overview
 
-Here is an overview of how the components in BobaComponents come together to
+Here is an overview of how the components in boba-components come together to
 compose the website structure.
 
 ![Layout.tsx covers the page as a whole, FeedWithMenu.tsc hasthe main content feed, and SideMenu.tsx controls the side menu content.](../../../../assets/img/legacy/ui.png)
@@ -157,7 +157,7 @@ or
 
 ## Debugging
 
-BobaComponents uses the [debug](https://www.npmjs.com/package/debug) JS library.
+boba-components uses the [debug](https://www.npmjs.com/package/debug) JS library.
 To trigger debugging in the JavaScript console, you must set the value of the
 corresponding flag in localStorage by using one of the following commands within
 the console itself:
