--- a/src/content/docs/development/contribute/wsl.mdx
+++ b/src/content/docs/development/contribute/wsl.mdx
@@ -210,7 +210,7 @@ and reopening it. If that fails, you may need to restart Windows.
 
 3. Which version of Node is needed depends primarily on what you are going to be
    working on. If you are developing for the main BobaBoard codebases
-   (boba-frontend, BobaComponents, etc), use the below command to install
+   (boba-frontend, boba-components, etc), use the below command to install
    NodeJS 16.
 
    ```bash showLineNumbers
@@ -318,7 +318,7 @@ Now that you've navigated into your directory, you're ready to start cloning the
 various BobaBoard repos. See
 [Install boba-frontend](/docs/development/start-developing/boba-frontend),
 [Install boba-backend](/docs/development/start-developing/boba-backend), or
-[Install BobaComponents](/docs/development/start-developing/boba-components) for
+[Install boba-components](/docs/development/start-developing/boba-components) for
 more details.
 
 :::note
